--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-test-renderer": "^16.8.6",
+    "yarn": "^1.15.2"
   },
   "scripts": {
     "start": "react-scripts start",
